--- a/src/main/resources/db/changelog/24.07.2024/01_create_user_table.yaml
+++ b/src/main/resources/db/changelog/24.07.2024/01_create_user_table.yaml
@@ -20,6 +20,11 @@ databaseChangeLog:
                     nullable: false
                     unique: true
               - column:
+                  name: telegram_chat_id
+                  type: BIGINT
+                  constraints:
+                    nullable: true
+              - column:
                   name: first_name
                   type: VARCHAR(50)
                   constraints:
