feat(STOCK-16) optimisation, notifications updated

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,13 @@
             <groupId>org.springframework.amqp</groupId>
             <artifactId>spring-rabbit-stream</artifactId>
         </dependency>
+
+        <!-- Spring Retry -->
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+            <version>1.3.4</version> <!-- Убедитесь, что версия совместима с вашей версией Spring Boot -->
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
