--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,19 @@
             <artifactId>spring-retry</artifactId>
             <version>1.3.4</version> <!-- Убедитесь, что версия совместима с вашей версией Spring Boot -->
         </dependency>
+
+        <!-- Logback Classic для логирования -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+
+        <!-- Logstash Logback Encoder для JSON логирования -->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>8.0</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
