feat(STOCK-54) added 2 new command: /pulse - to get information from Tinkoff Pulse & /news - to get news from variable sources

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -44,6 +44,12 @@ integration:
     auth-service-url: http://localhost:8081
     user-service-url: http://localhost:8080
     tinkoff-api-service-url: http://localhost:8082
+  rabbit:
+    analytics-service:
+      request-queue: requestQueue
+      pulse-response-queue: pulseResponseQueue
+      news-response-queue: newsResponseQueue
+
 
 telegram-bot:
   notification:
