--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,21 +4,20 @@ spring:
 
 integration:
   rabbit:
-    exchange: analytics-exchange
-    inbound:
-      analytics:
-        pulse:
-          queue: analytics-response-pulse-queue
-        news:
-          queue: analytics-response-news-queue
-    outbound:
-      analytics:
-        routing-key:
-          request:
-            key: request
-          response:
-            pulse:
-              key: response.pulse
-            news:
-              key: response.news
-        queue: analytics-request-queue
+    exchanges:
+      analytics: analytics-exchange
+    queues:
+      outbound:
+        notification: notification-queue
+        analytics:
+          request: analytics-request-queue
+      inbound:
+        analytics:
+          pulse: analytics-response-pulse-queue
+          news: analytics-response-news-queue
+    routing-keys:
+      tg-bot:
+        request: request
+        response:
+          pulse: response.pulse
+          news: response.news
