--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,11 @@
             <version>1.6.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jeasy</groupId>
+            <artifactId>easy-random-core</artifactId>
+            <version>5.0.0</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
