--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -32,7 +32,7 @@ spring:
 
 security:
   internal:
-    token: Iq6Vu8Nz7Xa3Rl9Cm5YbTc2WpDf4Oj5ZfGn1Kh3
+    token: SXE2VnU4Tno3WGEzUmw5Q201WWJUYzJXcERmNE9qNVpmR24xS2gz
 
 cache:
   caffeine:
@@ -43,7 +43,9 @@ integration:
   rest:
     auth-service-url: http://localhost:8081
     user-service-url: http://localhost:8080
-    tinkoff-api-service-url: http://localhost:8082
+    tinkoff-api-service:
+      url: http://localhost:8082
+      token: ZEdsdWEyOW1aa0Z3YVMxcGJuUmxjbTVoYkMxclpYaz0K
 
 telegram-bot:
   notification:
