feat(STOCK-52) - Fixing conflicts caused by an incorrect automatic merge - minor changes

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -43,7 +43,9 @@ cache:
 integration:
   rest:
     auth-service-url: ${AUTH_SERVICE_URL}
-    user-service-url: ${USER_SERVICE_URL}
+    user-service:
+      url: ${USER_SERVICE_URL}
+      token: ${USER_SERVICE_TOKEN}
 
 
 telegram-bot:
