--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -32,7 +32,7 @@ spring:
 
 security:
   internal:
-    token: Iq6Vu8Nz7Xa3Rl9Cm5YbTc2WpDf4Oj5ZfGn1Kh3
+    token: SXE2VnU4Tno3WGEzUmw5Q201WWJUYzJXcERmNE9qNVpmR24xS2gz
 
 cache:
   caffeine:
@@ -42,7 +42,10 @@ cache:
 integration:
   rest:
     auth-service-url: http://localhost:8081
-    user-service-url: http://localhost:8080
+    user-service:
+      url: http://localhost:8080
+      token: YzNSaGRHbHpkR2xqY3kxcGJuUmxjbTVoYkMxclpYaz0K
+
   rabbit:
     user-service:
       exchange:
@@ -54,7 +57,7 @@ integration:
       user-update-queue:
         name: user-update
         routing-key: tgBot.user-update
-        # TODO: добавить темплейты который хуй пойми почему убрались
+        template: "*.user-update"
 
 telegram-bot:
   notification:
