feat(STOCK-52) - moved user-service token to secret

--- a/k8s/lissa-trading-tg-bot-secret.yaml
+++ b/k8s/lissa-trading-tg-bot-secret.yaml
@@ -7,3 +7,4 @@ data:
   SPRING_DATASOURCE_PASSWORD: cm9vdC1wYXNzd29yZC0xMjM=
   BOT_TOKEN: NzMyOTcyMzMyNTpBQUhZTWhRSERhVmVGWVVqUDNRa0NCQzdfOC01UGEzaV95cw==
   SECURITY_INTERNAL_TOKEN: SXE2VnU4Tno3WGEzUmw5Q201WWJUYzJXcERmNE9qNVpmR24xS2gz
+  USER_SERVICE_TOKEN: ZFhObGNsTmxjblpwWTJVdGFXNTBaWEp1WVd3dGEyVjU=
