--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -2,7 +2,7 @@ server:
   port: 8083
 
 bot:
-  token: ${BOT_TOKEN}
+  token: 8035040685:AAEeh-W-y20WLfJJkH7XnAiKoHXUiLyaKnY
   name: "lissa_trading_bot"
 
 spring:
@@ -42,10 +42,10 @@ cache:
 integration:
   rest:
     auth-service-url: http://localhost:8081
-    user-service:
-      url: http://localhost:8080
-      token: YzNSaGRHbHpkR2xqY3kxcGJuUmxjbTVoYkMxclpYaz0K
-
+    services:
+      user:
+        url: http://localhost:8080
+        token: ZFhObGNsTmxjblpwWTJVdGFXNTBaWEp1WVd3dGEyVjU=
   rabbit:
     inbound:
       user-service:
