--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -2,7 +2,7 @@ server:
   port: 8083
 
 bot:
-  token: ${BOT_TOKEN}
+  token: 8035040685:AAEeh-W-y20WLfJJkH7XnAiKoHXUiLyaKnY
   name: "lissa_trading_bot"
 
 spring:
@@ -32,7 +32,7 @@ spring:
 
 security:
   internal:
-    token: SXE2VnU4Tno3WGEzUmw5Q201WWJUYzJXcERmNE9qNVpmR24xS2gz
+    token: ZEdkQ2IzUXRhVzUwWlhKdVlXd3RhMlY1
 
 cache:
   caffeine:
